<?xml version="1.0"?>
<package format="2">
  <name>amrl_libs</name>
  <version>0.0.1</version>
  <description>Package for personal work in AMR lab</description>

  <maintainer email="ukw4tc@virginia.edu">P. Sherman</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslaunch</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>amrl_logging</depend>
  <depend>crazyswarm</depend>
  <depend>vicon_bridge</depend>

</package>
